--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -4,6 +4,7 @@ backports.shutil-get-terminal-size==1.0.0
 cycler==0.10.0
 decorator==4.1.2
 enum34==1.1.6
+gpiozero==1.4.0
 imutils==0.4.3
 ipython==5.5.0
 ipython-genutils==0.2.0
