--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -23,6 +23,7 @@ pigpio==1.38
 Pillow==4.3.0
 prompt-toolkit==1.0.15
 ptyprocess==0.5.2
+pygame==1.9.3
 Pygments==2.2.0
 pyparsing==2.2.0
 python-dateutil==2.6.1
